[package]
name = "jpeg_exif_stripper"
version = "0.1.0"
edition = "2021"
authors = ["Raimo Geisel <raimo@geisel-web.de>"]
license = "GPL-3.0-only"
description = "A high-performance, lossless JPEG EXIF metadata removal utility."
repository = "https://github.com/pommersche92/jpeg_exif_stripper"
readme = "README.md"
keywords = ["jpeg", "exif", "metadata", "stripper", "lossless"]
categories = ["command-line-utilities", "multimedia::images"]

[package.metadata.deb]
name = "jpeg-exif-stripper"
maintainer = "Raimo Geisel <raimog92@protonmail.com>"
copyright = "2024, Raimo Geisel <raimog92@protonmail.com>"
license-file = ["LICENSE.md", "0"]
extended-description = """\
A high-performance, modular, and completely lossless command-line utility \
written in Rust to surgically remove EXIF metadata fields from JPEG images."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/jpeg_exif_stripper", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/jpeg-exif-stripper/", "644"],
]

[dependencies]
kamadak-exif = "0.6.1"
img-parts = "0.4.0"

# --- Release Build Profiles Optimization Matrix ---
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"